Fix build further