@@ -34,7 +34,7 @@
         <app.name>PCPanel</app.name>
         <maven.build.timestamp.format>yy.ww.WWkkmm</maven.build.timestamp.format>
         <app.version>${project.baseversion}.${github.build}</app.version>
-        <jvm.modules>javafx.controls,javafx.fxml,javafx.swing,java.desktop,java.management,java.logging,jdk.crypto.cryptoki</jvm.modules>
+        <jvm.modules>javafx.controls,javafx.fxml,javafx.swing,java.desktop,java.management,java.logging,jdk.crypto.cryptoki,java.net.http</jvm.modules>
         <windows.upgrade.uuid>9421bff0-3840-414c-8563-407fbcd1d04d</windows.upgrade.uuid>
         <windows.vendor>PCPanel</windows.vendor>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -342,7 +342,6 @@
                                 <arg>--strip-debug</arg>
                                 <arg>--no-man-pages</arg>
                                 <arg>--compress=2</arg>
-                                <arg>--add-modules=javafx.controls,javafx.fxml,javafx.swing</arg>
                             </args>
                         </configuration>
                     </execution>
